Исправление удаления Volumes

--- a/.github/workflows/deploy-to-vps.yml
+++ b/.github/workflows/deploy-to-vps.yml
@@ -114,21 +114,21 @@ jobs:
             mkdir -p client/node_modules
             mkdir -p server/node_modules
             
+            # Вытягиваем образы
+            echo "📦 Pulling images..."
+            docker compose pull || true
+
             # Останавливаем старые контейнеры
             echo "⏹️ Stopping old containers..."
             docker compose down -v || true
             
-            # Очищаем неиспользуемые ресурсы
-            echo "🧹 Pruning Docker resources..."
-            docker system prune -af --volumes || true
-            
-            # Вытягиваем образы
-            echo "📦 Pulling images..."
-            docker compose pull || true
-            
             # Запускаем контейнеры
             echo "🐳 Starting containers..."
             docker compose up -d --build
+            
+            # Агрессивно очищаем неиспользуемые ресурсы
+            echo "🧹 Pruning Docker resources..."
+            docker system prune -af
             
             # Проверяем здоровье сервиса
             echo "🔍 Checking service health (max 30 attempts)..."
